# distributed_ml_patterns

./: .env.example  .gitignore  README.md  pyproject.toml
