[tool.poetry]
name = "distributed-ml-patterns"
version = "0.1.0"
description = ""
authors = ["Mostafa Abdelrashied <mostafa.abdelrashied@outlook.de>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "src"
from = "."

[tool.poetry.dependencies]
python = "^3.13"
scipy = "^1.14.1"
loguru = "^0.7.3"
numpy = "^2.2.0"
polars = "^1.17.1"
pyarrow = "^18.1.0"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
